# BCUCRust

./: Cargo.toml
src/: lib.rs  main.rs
src/catalogo/: general.rs
src/cupos/: general.rs
src/cursos/: choquesPermitidos.rs  choques_permitidos.rs  curso.rs  general.rs  mod.rs  modulo.rs  utils.rs
