[package]
name = "BCUCRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuchiki = "0.8.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.19.0"
select = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
